[project]
name = "invoice-opei"
dynamic = ["version"]
description = "OPEI electronic invoice SDP ingestion pipeline for Databricks"
authors = [{ name = "Data Team", email = "data.team@mail.7-11.com.tw" }]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[tool.uv.sources]
pipeline-ingestion-framework = { path = "../pipeline_ingestion_framework", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/invoice_opei"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/invoice_opei/_version.py"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pyspark (>=4.0.0)",
    "pyarrow (>=23.0.0,<24.0.0)",
    "pipeline-ingestion-framework",
    "mypy>=1.19.1",
    "ruff>=0.15.0",
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 88
src = ["src"]
exclude = ["src/invoice_opei/_version.py"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

ignore = [
    "E501",
    "B008",
    "C901",
    "W191",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
